--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# bootstrap files
+bootstrap-4.3.1-dist/
